fixed spacing issue on the My Profile/logout button

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,13 +1,13 @@
 #revicon {
-    width: 8%;
-    height: 8%;
-    margin-right: 10px;
+  width: 8%;
+  height: 8%;
+  margin-right: 10px;
 }
 
-nav {
+/* nav {
     height: 7vh;
 }
 
 .a-align-right{
     margin-left:940px;
-}
+} */
